cabal-version:      2.2
name:               chainweb-api
version:            1.0.0
description:        Common types for communicating with a Chainweb Node.
homepage:           https://github.com/kadena-io/chainweb-api
author:             Chainweb Dev Team
maintainer:         chainweb-dev@kadena.io
copyright:          Copyright (C) 2019 Kadena LLC
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  README.md
  ChangeLog.md

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  build-depends:
    , aeson                 ^>=1.4
    , base                  >=4.7  && <5
    , base16-bytestring     ^>=0.1
    , base64-bytestring     ^>=1.0
    , bytestring            ^>=0.10
    , containers            ^>=0.6
    , errors                ^>=2.3
    , hashable              ^>=1.2
    , lens                  ^>=4.17
    , lens-aeson            >=1.0  && <1.2
    , readable              ^>=0.3
    , text
    , time
    , unordered-containers  ^>=0.2

  exposed-modules:
    ChainwebApi.Types.Base64Url
    ChainwebApi.Types.BlockHeader
    ChainwebApi.Types.BlockHeaderTx
    ChainwebApi.Types.BlockPayload
    ChainwebApi.Types.BytesLE
    ChainwebApi.Types.ChainTip
    ChainwebApi.Types.ChainwebMeta
    ChainwebApi.Types.Common
    ChainwebApi.Types.Cut
    ChainwebApi.Types.Hash
    ChainwebApi.Types.MinerData
    ChainwebApi.Types.PactCommand
    ChainwebApi.Types.Payload
    ChainwebApi.Types.RespItems
    ChainwebApi.Types.Sig
    ChainwebApi.Types.Signer
    ChainwebApi.Types.Transaction
    Common.Types
    Common.Utils
