cabal-version:      2.2
name:               chainweb-api
version:            1.2.1
description:        Common types for communicating with a Chainweb Node.
homepage:           https://github.com/kadena-io/chainweb-api
author:             Chainweb Dev Team
maintainer:         chainweb-dev@kadena.io
copyright:          Copyright (C) 2019 Kadena LLC
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  README.md
  ChangeLog.md

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
    -Wall -Wcompat -Wpartial-fields -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Widentities

  build-depends:
      Decimal               >= 0.4.2 && < 0.6
    , aeson                 >=1.4
    , attoparsec            >= 0.13.0.2 && < 0.15
    , base                  >=4.7  && <5
    , base16-bytestring     >=0.1
    , base64-bytestring     >=1.0
    , bytestring            >=0.10
    , cereal                ^>=0.5
    , containers            ^>=0.6
    , data-default          ^>=0.7
    , hashable              >=1.2
    , readable              ^>=0.3
    , scientific
    , servant               >= 0.16
    , text                  >=1.2
    , time                  >=1.8 && < 1.11
    , unordered-containers  ^>=0.2
    , vector                >= 0.11.0.0 && < 0.13

  if !impl(ghcjs)
    build-depends:
        blake2 ^>=0.3
    cpp-options: -DWITH_BLAKE2S

  exposed-modules:
    Chainweb.Api.Base64Url
    Chainweb.Api.BlockHeader
    Chainweb.Api.BlockHeaderTx
    Chainweb.Api.BlockPayload
    Chainweb.Api.BlockPayloadWithOutputs
    Chainweb.Api.BytesLE
    Chainweb.Api.ChainId
    Chainweb.Api.ChainTip
    Chainweb.Api.ChainwebMeta
    Chainweb.Api.Common
    Chainweb.Api.Cut
    Chainweb.Api.Guard
    Chainweb.Api.Hash
    Chainweb.Api.LocalResult
    Chainweb.Api.MinerData
    Chainweb.Api.NodeInfo
    Chainweb.Api.PactCommand
    Chainweb.Api.PactNumber
    Chainweb.Api.ParsedNumbers
    Chainweb.Api.Payload
    Chainweb.Api.RespItems
    Chainweb.Api.Sig
    Chainweb.Api.Signer
    Chainweb.Api.StringEncoded
    Chainweb.Api.Transaction
    ChainwebData.Api
    ChainwebData.EventDetail
    ChainwebData.TransferDetail
    ChainwebData.Pagination
    ChainwebData.TxSummary
    ChainwebData.TxDetail
    ChainwebData.Util
    Crypto.Hash.Blake2Native

test-suite testsuite
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Suite.hs

    build-depends:
        -- internal
          chainweb-api

        -- external
        , aeson
        , base >= 4.12 && < 5
        , bytestring
        , cereal
        , neat-interpolation >= 0.5
        , tasty       ^>= 1.2
        , tasty-hunit ^>= 0.10
        , text
